...
    flex: 1,
    alignItems: 'center',
  },
  barContainer: {
    flex: 1,
    justifyContent: 'flex-end',
    width: '50%',
  },
  bar: {
    width: '100%',
    borderRadius: 2,
    minHeight: 3,
  },
...
